--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,11 @@
         <deploy url="${tomcat.manager.url}" username="${tomcat.user}" password="${tomcat.password}"
                 path="/deliverytools" war="file:${download.dir}/deliverytools.war"/>
     </target>
+    
+    <target name="deploy.gn.testapp" description="Install">
+        <deploy url="${tomcat.manager.url}" username="${tomcat.user}" password="${tomcat.password}"
+                path="/ghana-national-test" war="file:${download.dir}/ghana-national-test.war"/>
+    </target>
 
     <target name="reload.national" description="Reload">
         <reload url="${tomcat.manager.url}" username="${tomcat.user}" password="${tomcat.password}"
@@ -70,6 +75,11 @@
                   password="${tomcat.password}" path="/deliverytools"/>
     </target>
 
+    <target name="undeploy.gn.testapp" description="Remove">
+        <undeploy url="${tomcat.manager.url}" failonerror="false" username="${tomcat.user}"
+                  password="${tomcat.password}" path="/ghana-national-test"/>
+    </target>
+
     <!-- TOMCAT TASKS /END/-->
 
     <target name="setup">
@@ -89,6 +99,14 @@
              src="${hudson.delivery.tools.url}"/>
         <echo message="downloaded ghana-deliverytools-web-${hudson.delivery.tools.release.version}.war from hudson"/>
     </target>
+
+
+    <target name="download.latest.testapp.from.hudson">
+        <get dest="${download.dir}/ghana-national-test.war"
+             src="${hudson.ghana.national.test.url}"/>
+        <echo message="downloaded ghana-national-test-${hudson.ghana.national.release.version}.war from hudson"/>
+    </target>
+
 
     <target name="drop.national.db">
         <exec executable="curl">
@@ -203,11 +221,11 @@
     </target>
 
     <target name="load.seed.data">
-        <get dest="${download.dir}/ghana-national-tools-1.0-SNAPSHOT.jar"
-             src="http://nexus.motechproject.org/content/repositories/snapshots/org/motechproject/ghana-national-tools/1.0-SNAPSHOT/ghana-national-tools-1.0-SNAPSHOT.jar"/>
+        <get dest="${download.dir}/ghana-national-tools.jar"
+             src="${hudson.ghana.national.tools.url}"/>
         <unzip dest="${download.dir}">
             <fileset dir="${download.dir}">
-                <include name="ghana-national-tools-1.0-SNAPSHOT.jar"/>
+                <include name="ghana-national-tools.jar"/>
             </fileset>
         </unzip>
         <path id="lib.path">
@@ -227,7 +245,7 @@
 
     <target name="migrate.schedule.data">
         <get dest="${download.dir}/ghana-national-tools-1.0-SNAPSHOT.jar"
-             src="http://nexus.motechproject.org/content/repositories/snapshots/org/motechproject/ghana-national-tools/1.0-SNAPSHOT/ghana-national-tools-1.0-SNAPSHOT.jar"/>
+             src="${hudson.ghana.national.tools.url}"/>
         <unzip dest="${download.dir}/ghana-national-tools-1.0-SNAPSHOT">
             <fileset dir="${download.dir}">
                 <include name="ghana-national-tools-1.0-SNAPSHOT.jar"/>
@@ -304,12 +322,12 @@
     </target>
 
     <target name="init.migrated" depends="setup,drop.national.db,load.migrated.openmrs.schema,download.openmrs,deploy.idgen.omod,
-    undeploy.openmrs,deploy.openmrs,download.latest.national.from.hudson,undeploy.national,deploy.national,download.latest.deliverytools.from.hudson,
+    undeploy.openmrs,deploy.openmrs,download.latest.national.from.hudson,undeploy.national,deploy.national,download.latest.testapp.from.hudson,undeploy.gn.testapp,deploy.gn.testapp,download.latest.deliverytools.from.hudson,
     undeploy.deliverytools,deploy.deliverytools,load.seed.data,reload.national"/>
 
     <target name="init" depends="setup,drop.national.db,load.openmrs.schema,openmrs.quartz,openmrs.deltas,download.openmrs,
     deploy.reports,deploy.idgen.omod,undeploy.openmrs,deploy.openmrs,download.latest.national.from.hudson,undeploy.national,
-    deploy.national,download.latest.deliverytools.from.hudson,undeploy.deliverytools,deploy.deliverytools,load.seed.data,reload.national"/>
+    deploy.national,download.latest.deliverytools.from.hudson,undeploy.deliverytools,deploy.deliverytools,download.latest.testapp.from.hudson,undeploy.gn.testapp,deploy.gn.testapp,load.seed.data,reload.national"/>
 
     <target name="deploy.latest"
             depends="setup,download.latest.national.from.hudson,undeploy.national,deploy.national,load.seed.data,reload.national"/>
