--- a/build.xml
+++ b/build.xml
@@ -355,13 +355,15 @@
         </copy>
     </target>
 
-    <target name="init.migrated" depends="setup,drop.national.db,load.migrated.openmrs.schema,download.openmrs,deploy.idgen.omod,
-    undeploy.openmrs,deploy.openmrs,download.latest.national.from.hudson,undeploy.national,deploy.national,download.latest.testapp.from.hudson,undeploy.gn.testapp,deploy.gn.testapp,download.latest.deliverytools.from.hudson,
-    undeploy.deliverytools,deploy.deliverytools,load.seed.data,reload.national"/>
+    <target name="init.migrated" depends="setup, drop.national.db, load.migrated.openmrs.schema, openmrs.quartz,
+    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson,
+    undeploy.national, deploy.national, download.latest.testapp.from.hudson, undeploy.gn.testapp, deploy.gn.testapp,
+    download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
-    <target name="init" depends="setup,drop.national.db,load.openmrs.schema,openmrs.quartz,openmrs.deltas,download.openmrs,
-    deploy.reports,deploy.idgen.omod,undeploy.openmrs,deploy.openmrs,download.latest.national.from.hudson,undeploy.national,
-    deploy.national,download.latest.deliverytools.from.hudson,undeploy.deliverytools,deploy.deliverytools,download.latest.testapp.from.hudson,undeploy.gn.testapp,deploy.gn.testapp,load.seed.data,reload.national"/>
+    <target name="init" depends="setup, drop.national.db, load.openmrs.schema, openmrs.quartz, openmrs.deltas,
+    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson,
+    undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools,
+    download.latest.testapp.from.hudson, undeploy.gn.testapp, deploy.gn.testapp, load.seed.data, reload.national"/>
 
     <target name="deploy.latest"
             depends="setup,download.latest.national.from.hudson,undeploy.national,deploy.national,load.seed.data,reload.national"/>
