--- a/build.xml
+++ b/build.xml
@@ -375,12 +375,12 @@
     </target>
 
     <target name="init.migrated" depends="setup, drop.national.db, load.migrated.openmrs.schema, openmrs.quartz,
-    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson, 
+    deploy.reports, download.openmrs, undeploy.openmrs, deploy.openmrs, deploy.idegen.omod, download.latest.national.from.hudson, 
     download.latest.testapp.from.hudson, merge.test.app.to.national.app, undeploy.national, deploy.national, 
     download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
     <target name="init" depends="setup, drop.national.db, load.openmrs.schema, openmrs.quartz, openmrs.deltas,
-    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app,
+    deploy.reports, download.openmrs, undeploy.openmrs, deploy.openmrs, deploy.idgen.omod, download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app,
     undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
     <target name="deploy.latest"
