--- a/build.xml
+++ b/build.xml
@@ -422,10 +422,10 @@
     download.latest.testapp.from.hudson, merge.test.app.to.national.app, undeploy.national, deploy.national, 
     download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
-    <target name="init" depends="setup, drop.national.db, load.openmrs.schema, openmrs.quartz, openmrs.deltas,
+    <target name="init" depends="setup, drop.national.db, load.openmrs.schema, openmrs.quartz,
     deploy.reports, download.openmrs, undeploy.openmrs, deploy.openmrs, deploy.idgen.omod, download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app,
-    undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
+    undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, openmrs.deltas, load.seed.data, reload.national"/>
 
     <target name="deploy.latest"
-            depends="setup,download.latest.national.from.hudson,download.latest.testapp.from.hudson, merge.test.app.to.national.app,undeploy.national,deploy.national,load.seed.data,reload.national"/>
+            depends="setup,download.latest.national.from.hudson,download.latest.testapp.from.hudson, merge.test.app.to.national.app,undeploy.national,deploy.national,openmrs.deltas, load.seed.data,reload.national"/>
 </project>
