--- a/build.xml
+++ b/build.xml
@@ -108,6 +108,25 @@
     </target>
 
 
+	<target name="merge.test.app.to.national.app">
+		<delete dir="${download.dir}/temp_merge"/>
+		<mkdir dir="${download.dir}/temp_merge"/>
+		<mkdir dir="${download.dir}/temp_merge/test"/>
+		<move file="${download.dir}/ghana-national-web-1.0-SNAPSHOT.war" tofile="${download.dir}/ghana-national-web-1.0-SNAPSHOT_bk.war"/>        
+		<unzip dest="${download.dir}/temp_merge/test">
+            <fileset dir="${download.dir}">
+                <include name="ghana-national-test-1.0-SNAPSHOT.war"/>
+            </fileset>
+        </unzip>	
+		<zip destfile="${download.dir}/ghana-national-web-1.0-SNAPSHOT.war">
+		    <zipfileset dir="${download.dir}/temp_merge/test/WEB-INF/classes/org" prefix="WEB-INF/classes/org"/>
+		    <zipfileset dir="${download.dir}/temp_merge/test/WEB-INF/views/schedule" prefix="WEB-INF/views/schedule"/>
+		    <zipfileset dir="${download.dir}/temp_merge/test/js" prefix="js" excludes="lib/*"/>
+			<zipgroupfileset dir="." includes="${download.dir}/ghana-national-web-1.0-SNAPSHOT_bk.war"/>
+  		</zip>
+	</target>
+
+
     <target name="drop.national.db">
         <exec executable="curl">
             <arg value="-s"/>
@@ -356,15 +375,14 @@
     </target>
 
     <target name="init.migrated" depends="setup, drop.national.db, load.migrated.openmrs.schema, openmrs.quartz,
-    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson,
-    undeploy.national, deploy.national, download.latest.testapp.from.hudson, undeploy.gn.testapp, deploy.gn.testapp,
+    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson, 
+    download.latest.testapp.from.hudson, merge.test.app.to.national.app, undeploy.national, deploy.national, 
     download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
     <target name="init" depends="setup, drop.national.db, load.openmrs.schema, openmrs.quartz, openmrs.deltas,
-    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson,
-    undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools,
-    download.latest.testapp.from.hudson, undeploy.gn.testapp, deploy.gn.testapp, load.seed.data, reload.national"/>
+    deploy.reports, deploy.idgen.omod, download.openmrs, undeploy.openmrs, deploy.openmrs, download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app,
+    undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
     <target name="deploy.latest"
-            depends="setup,download.latest.national.from.hudson,undeploy.national,deploy.national,load.seed.data,reload.national"/>
+            depends="setup,download.latest.national.from.hudson,download.latest.testapp.from.hudson, merge.test.app.to.national.app,undeploy.national,deploy.national,load.seed.data,reload.national"/>
 </project>
